@@ -2,6 +2,11 @@ fidoconfig 0.91
 ---------------
 
 ----- cvs ci ------
+Mon Apr  3 17:39:30 NOVST 2000
+max (patch from Serguei Revtov):
+* additional checks on carbons
+
+----- cvs ci ------
 Sat Apr  1 20:45:39 NOVST 2000
 max:
 * document tokens LinkGrp & NetArea
